# serializer version: 1
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_barometric_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_barometric_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Barometric pressure',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ATMOSPHERIC_PRESSURE: 'atmospheric_pressure'>,
    'original_icon': None,
    'original_name': 'Barometric pressure',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'barometric_pressure',
    'unique_id': '05b3e4e44_05b3e4e44_barometric_pressure',
    'unit_of_measurement': 'hPa',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_barometric_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'atmospheric_pressure',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me 05B-3E4-E44 (05B3E4E44) Barometric pressure',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 7, 26, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'hPa',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_barometric_pressure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1011.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Humidity',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'Humidity',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'humidity',
    'unique_id': '05b3e4e44_05b3e4e44_humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me 05B-3E4-E44 (05B3E4E44) Humidity',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 7, 26, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '35.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_low_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_low_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Low battery',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Low battery',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_05b3e4e44_lowbatt',
    'unit_of_measurement': 'Yes',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_low_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me 05B-3E4-E44 (05B3E4E44) Low battery',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 7, 26, tzinfo=datetime.timezone.utc),
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'Yes',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_low_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_05b3e4e44_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me 05B-3E4-E44 (05B3E4E44) RSSI',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 7, 26, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature',
    'unique_id': '05b3e4e44_05b3e4e44_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me 05B-3E4-E44 (05B3E4E44) Temperature',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 7, 26, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '23.8',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_low_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_low_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Low battery',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Low battery',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_a1fffffea_lowbatt',
    'unit_of_measurement': '',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_low_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A1F-FFF-FEA (05B3E4E44) Low battery',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 1, 57, tzinfo=datetime.timezone.utc),
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_low_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_rain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_rain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rain',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Rain',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rain',
    'unique_id': '05b3e4e44_a1fffffea_rain',
    'unit_of_measurement': 'mm',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_rain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A1F-FFF-FEA (05B3E4E44) Rain',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 1, 57, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'mm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_rain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7.4',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_rain_last_24_hours-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_rain_last_24_hours',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rain last 24 hours',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Rain last 24 hours',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rain_24_hours',
    'unique_id': '05b3e4e44_a1fffffea_rain_24_hours',
    'unit_of_measurement': 'mm',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_rain_last_24_hours-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A1F-FFF-FEA (05B3E4E44) Rain last 24 hours',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 1, 57, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'mm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_rain_last_24_hours',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_rain_last_hour-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_rain_last_hour',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rain last hour',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Rain last hour',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rain_1_hour',
    'unique_id': '05b3e4e44_a1fffffea_rain_1_hour',
    'unit_of_measurement': 'mm',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_rain_last_hour-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A1F-FFF-FEA (05B3E4E44) Rain last hour',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 1, 57, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'mm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_rain_last_hour',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_relative_rain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_relative_rain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Relative rain',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Relative rain',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rain_relative',
    'unique_id': '05b3e4e44_a1fffffea_rain_rel',
    'unit_of_measurement': 'mm',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_relative_rain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A1F-FFF-FEA (05B3E4E44) Relative rain',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 1, 57, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'mm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_relative_rain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_a1fffffea_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A1F-FFF-FEA (05B3E4E44) RSSI',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 1, 57, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '192',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_low_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_low_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Low battery',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Low battery',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_a204e4df6_lowbatt',
    'unit_of_measurement': '',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_low_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A20-4E4-DF6 (05B3E4E44) Low battery',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 11, 26, tzinfo=datetime.timezone.utc),
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_low_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_a204e4df6_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A20-4E4-DF6 (05B3E4E44) RSSI',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 11, 26, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '218',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind direction',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wind direction',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_direction',
    'unique_id': '05b3e4e44_a204e4df6_wind_direction',
    'unit_of_measurement': '',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A20-4E4-DF6 (05B3E4E44) Wind direction',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 11, 26, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction_degrees-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction_degrees',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind direction (degrees)',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wind direction (degrees)',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_direction_deg',
    'unique_id': '05b3e4e44_a204e4df6_wind_direction_deg',
    'unit_of_measurement': '°',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction_degrees-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A20-4E4-DF6 (05B3E4E44) Wind direction (degrees)',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 11, 26, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction_degrees',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '180.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_gust-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_gust',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind gust',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Wind gust',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_gust',
    'unique_id': '05b3e4e44_a204e4df6_wind_gust',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_gust-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A20-4E4-DF6 (05B3E4E44) Wind gust',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 11, 26, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_gust',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind speed',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Wind speed',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_speed',
    'unique_id': '05b3e4e44_a204e4df6_wind_speed',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A20-4E4-DF6 (05B3E4E44) Wind speed',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 11, 26, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_low_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_low_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Low battery',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Low battery',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_a2ffffffb_lowbatt',
    'unit_of_measurement': '',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_low_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A2F-FFF-FFB (05B3E4E44) Low battery',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 10, 23, tzinfo=datetime.timezone.utc),
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_low_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_a2ffffffb_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A2F-FFF-FFB (05B3E4E44) RSSI',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 10, 23, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '218',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind direction',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wind direction',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_direction',
    'unique_id': '05b3e4e44_a2ffffffb_wind_direction',
    'unit_of_measurement': '',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A2F-FFF-FFB (05B3E4E44) Wind direction',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 10, 23, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction_degrees-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction_degrees',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind direction (degrees)',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wind direction (degrees)',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_direction_deg',
    'unique_id': '05b3e4e44_a2ffffffb_wind_direction_deg',
    'unit_of_measurement': '°',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction_degrees-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A2F-FFF-FFB (05B3E4E44) Wind direction (degrees)',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 10, 23, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction_degrees',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '180.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_gust-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_gust',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind gust',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Wind gust',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_gust',
    'unique_id': '05b3e4e44_a2ffffffb_wind_gust',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_gust-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A2F-FFF-FFB (05B3E4E44) Wind gust',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 10, 23, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_gust',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind speed',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Wind speed',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_speed',
    'unique_id': '05b3e4e44_a2ffffffb_wind_speed',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A2F-FFF-FFB (05B3E4E44) Wind speed',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 10, 23, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a36_4f3_d67_05b3e4e44_low_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a36_4f3_d67_05b3e4e44_low_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Low battery',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Low battery',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_a364f3d67_lowbatt',
    'unit_of_measurement': '',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a36_4f3_d67_05b3e4e44_low_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A36-4F3-D67 (05B3E4E44) Low battery',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 8, 47, tzinfo=datetime.timezone.utc),
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a36_4f3_d67_05b3e4e44_low_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a36_4f3_d67_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a36_4f3_d67_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_a364f3d67_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a36_4f3_d67_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A36-4F3-D67 (05B3E4E44) RSSI',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 8, 47, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a36_4f3_d67_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '226',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a36_4f3_d67_05b3e4e44_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a36_4f3_d67_05b3e4e44_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature',
    'unique_id': '05b3e4e44_a364f3d67_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a36_4f3_d67_05b3e4e44_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A36-4F3-D67 (05B3E4E44) Temperature',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 8, 47, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a36_4f3_d67_05b3e4e44_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '23.9',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Humidity',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'Humidity',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'humidity',
    'unique_id': '05b3e4e44_a4481290f_humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A44-812-90F (05B3E4E44) Humidity',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 10, 42, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '56.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_low_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_low_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Low battery',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Low battery',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_a4481290f_lowbatt',
    'unit_of_measurement': '',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_low_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A44-812-90F (05B3E4E44) Low battery',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 10, 42, tzinfo=datetime.timezone.utc),
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_low_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_a4481290f_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A44-812-90F (05B3E4E44) RSSI',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 10, 42, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '174',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature',
    'unique_id': '05b3e4e44_a4481290f_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A44-812-90F (05B3E4E44) Temperature',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 10, 42, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15.1',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_temperature_probe-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_temperature_probe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature probe',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature probe',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_probe',
    'unique_id': '05b3e4e44_a4481290f_temperature_probe',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_temperature_probe-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A44-812-90F (05B3E4E44) Temperature probe',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 10, 42, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_temperature_probe',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15.1',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Humidity',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'Humidity',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'humidity',
    'unique_id': '05b3e4e44_a6f169ad1_humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A6F-169-AD1 (05B3E4E44) Humidity',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 11, 5, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '38.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_low_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_low_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Low battery',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Low battery',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_a6f169ad1_lowbatt',
    'unit_of_measurement': 'Yes',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_low_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A6F-169-AD1 (05B3E4E44) Low battery',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 11, 5, tzinfo=datetime.timezone.utc),
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'Yes',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_low_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_a6f169ad1_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A6F-169-AD1 (05B3E4E44) RSSI',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 11, 5, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '227',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature',
    'unique_id': '05b3e4e44_a6f169ad1_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A6F-169-AD1 (05B3E4E44) Temperature',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 11, 5, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '23.9',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_low_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_low_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Low battery',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Low battery',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_bb1234567_lowbatt',
    'unit_of_measurement': '',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_low_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me BB1-234-567 (05B3E4E44) Low battery',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 1, 57, tzinfo=datetime.timezone.utc),
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_low_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_rain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_rain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rain',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Rain',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rain',
    'unique_id': '05b3e4e44_bb1234567_rain',
    'unit_of_measurement': 'mm',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_rain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me BB1-234-567 (05B3E4E44) Rain',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 1, 57, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'mm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_rain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7.4',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_rain_last_24_hours-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_rain_last_24_hours',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rain last 24 hours',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Rain last 24 hours',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rain_24_hours',
    'unique_id': '05b3e4e44_bb1234567_rain_24_hours',
    'unit_of_measurement': 'mm',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_rain_last_24_hours-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me BB1-234-567 (05B3E4E44) Rain last 24 hours',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 1, 57, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'mm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_rain_last_24_hours',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_rain_last_hour-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_rain_last_hour',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rain last hour',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Rain last hour',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rain_1_hour',
    'unique_id': '05b3e4e44_bb1234567_rain_1_hour',
    'unit_of_measurement': 'mm',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_rain_last_hour-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me BB1-234-567 (05B3E4E44) Rain last hour',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 1, 57, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'mm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_rain_last_hour',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_relative_rain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_relative_rain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Relative rain',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Relative rain',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rain_relative',
    'unique_id': '05b3e4e44_bb1234567_rain_rel',
    'unit_of_measurement': 'mm',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_relative_rain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me BB1-234-567 (05B3E4E44) Relative rain',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 1, 57, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'mm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_relative_rain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_bb1234567_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me BB1-234-567 (05B3E4E44) RSSI',
      'measurement_timestamp': HAFakeDatetime(2025, 11, 26, 15, 1, 57, tzinfo=datetime.timezone.utc),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '192',
  })
# ---
